// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing accordian component only opens the last section when multiple sections have been clicked 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 1
         
      </button>
       
       
    </li>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 2
         
      </button>
       
       
    </li>
    <li
      key="2"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 3
         
      </button>
       
      Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
       
    </li>
  </ul>
</div>
`;

exports[`Testing accordian component opens a clicked section 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 1
         
      </button>
       
       
    </li>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 2
         
      </button>
       
      Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
       
    </li>
    <li
      key="2"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 3
         
      </button>
       
       
    </li>
  </ul>
</div>
`;

exports[`Testing accordian component renders no sections as active by default 1`] = `
<div>
  <ul>
    <li>
      <button
        onClick={[Function]}
        type="button"
      >
        Section 1
         
      </button>
       
      
       
    </li>
    <li>
      <button
        onClick={[Function]}
        type="button"
      >
        Section 2
         
      </button>
       
      
       
    </li>
    <li>
      <button
        onClick={[Function]}
        type="button"
      >
        Section 3
         
      </button>
       
      
       
    </li>
  </ul>
</div>
`;
